--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,44 @@
-.App {
-  text-align: center;
+@import 'https://cdn.jsdelivr.net/npm/tailwindcss@2.2.16/dist/tailwind.min.css';
+
+.mainBody{
+  background-color: #FFDFDF;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.board{
+  background-color: #FFF6F6;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.reset{
+  background-color: #F875AA;
+  color: black;
+  transition: background-color 0.3s;
+  transition: color 0.3s;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.reset:hover{
+  background-color: #cf1925;
+  color: whitesmoke;
+}
+
+.board-row {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.square {
+  font-size: 1.5rem;
+  padding: 40px 50px;
+  margin: 5px;
+  background-color: #AEDEFC;
+  color: #10596c;
+  border: 1px solid #333;
+  border-radius: 10px;
+  cursor: pointer;
+  transition: background-color 0.3s;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.square:hover {
+  background-color: rgba(255, 0, 72, 0.8);
 }
+
+
+
